<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_smoke"
    tools:context=".fragments.ProfileFragment">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bar_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:src="@drawable/back_ic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/profile"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/profile_image_cv"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="48dp"
            app:cardCornerRadius="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar">

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/fio_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/nunito"
            android:text="Donaxon Olimova"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/profile_image_cv"
            app:layout_constraintStart_toEndOf="@id/profile_image_cv"
            app:layout_constraintTop_toTopOf="@id/profile_image_cv" />

        <TextView
            android:id="@+id/email_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito"
            android:text="dona21@gmail.com"
            android:textColor="#48466D"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/fio_txt"
            app:layout_constraintTop_toBottomOf="@id/fio_txt" />

        <ImageView
            android:id="@+id/edit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_for_ic"
            android:padding="12dp"
            android:src="@drawable/pen_ic"
            app:layout_constraintBottom_toBottomOf="@id/email_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/fio_txt" />

        <ImageView
            android:id="@+id/notification_ic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/bg_for_ic"
            android:padding="16dp"
            android:src="@drawable/notification_ic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_image_cv" />

        <TextView
            android:id="@+id/notification_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/notification"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/notification_ic"
            app:layout_constraintStart_toEndOf="@id/notification_ic"
            app:layout_constraintTop_toTopOf="@id/notification_ic" />

        <ImageView
            android:id="@+id/notification_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:src="@drawable/click_ic"
            app:layout_constraintBottom_toBottomOf="@id/notification_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/notification_txt" />

        <ImageView
            android:id="@+id/rejim_ic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/bg_for_ic"
            android:padding="16dp"
            android:src="@drawable/moon_ic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/notification_ic" />

        <TextView
            android:id="@+id/rejim_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/rejim"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/rejim_ic"
            app:layout_constraintStart_toEndOf="@id/rejim_ic"
            app:layout_constraintTop_toTopOf="@id/rejim_ic" />

        <ImageView
            android:id="@+id/rejim_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:src="@drawable/click_ic"
            app:layout_constraintBottom_toBottomOf="@id/rejim_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/rejim_txt" />

        <ImageView
            android:id="@+id/language_ic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/bg_for_ic"
            android:padding="16dp"
            android:src="@drawable/language_ic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rejim_ic" />

        <TextView
            android:id="@+id/language_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/language"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/language_ic"
            app:layout_constraintStart_toEndOf="@id/language_ic"
            app:layout_constraintTop_toTopOf="@id/language_ic" />

        <ImageView
            android:id="@+id/language_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:src="@drawable/click_ic"
            app:layout_constraintBottom_toBottomOf="@id/language_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/language_txt" />

        <ImageView
            android:id="@+id/font_ic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/bg_for_ic"
            android:padding="16dp"
            android:src="@drawable/font_ic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/language_ic" />

        <TextView
            android:id="@+id/font_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/font"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/font_ic"
            app:layout_constraintStart_toEndOf="@id/font_ic"
            app:layout_constraintTop_toTopOf="@id/font_ic" />

        <ImageView
            android:id="@+id/font_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:src="@drawable/click_ic"
            app:layout_constraintBottom_toBottomOf="@id/font_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/font_txt" />

        <ImageView
            android:id="@+id/exit_ic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/bg_for_ic"
            android:padding="16dp"
            android:src="@drawable/exit_ic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/font_ic" />

        <TextView
            android:id="@+id/exit_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/exit"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/exit_ic"
            app:layout_constraintStart_toEndOf="@id/exit_ic"
            app:layout_constraintTop_toTopOf="@id/exit_ic" />

        <ImageView
            android:id="@+id/exit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:src="@drawable/click_ic"
            app:layout_constraintBottom_toBottomOf="@id/exit_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/exit_txt" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/call_operator_cv"
            android:layout_marginTop="36dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/bg_for_cv"
            android:paddingVertical="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/exit_ic">

            <ImageView
                android:id="@+id/call_operator_ic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/operator_ic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/call_operator_txt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/call_operator_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/call_operator"
                android:textColor="@color/dark_purple"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/call_operator_ic"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>